--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -1,9 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://xmlns.jcp.org/xml/ns/javaee" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd" version="3.1">
-  <display-name>TeenViolence_Server</display-name>
+  <display-name>PsychServer</display-name>
   <servlet>
     <servlet-name>AuthenticatingUser</servlet-name>
     <servlet-class>authentication.AuthenticatingUser</servlet-class>
+  </servlet>
+  <servlet>
+    <servlet-name>AdminAuthentication</servlet-name>
+    <servlet-class>authentication.AdminAuthentication</servlet-class>
   </servlet>
   <servlet>
     <servlet-name>ImageDataServlet</servlet-name>
@@ -33,6 +37,10 @@
     <servlet-name>ImageFetcher</servlet-name>
     <servlet-class>imageData.ImageFetcher</servlet-class>
   </servlet>
+ <servlet-mapping>
+    <servlet-name>AdminAuthentication</servlet-name>
+    <url-pattern>/adminAuthentication</url-pattern>
+  </servlet-mapping>
   <servlet-mapping>
     <servlet-name>AuthenticatingUser</servlet-name>
     <url-pattern>/authentication/*</url-pattern>
