--- a/pom.xml
+++ b/pom.xml
@@ -6,6 +6,7 @@
   <packaging>war</packaging>
   <build>
     <sourceDirectory>src</sourceDirectory>
+    <testSourceDirectory>test</testSourceDirectory> 
     <plugins>
       <plugin>
         <artifactId>maven-compiler-plugin</artifactId>
@@ -23,6 +24,11 @@
           <failOnMissingWebXml>false</failOnMissingWebXml>
         </configuration>
       </plugin>
+      <plugin>
+         <groupId>org.apache.maven.plugins</groupId>
+         <artifactId>maven-surefire-plugin</artifactId>
+         <version>2.19.1</version>
+     </plugin>
     </plugins>
     <!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
   </build>
@@ -56,6 +62,5 @@
           <artifactId>json-simple</artifactId>
           <version>1.1</version>
       </dependency>
-
   </dependencies>
 </project>
