--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
   <packaging>war</packaging>
   <build>
     <sourceDirectory>src</sourceDirectory>
-    <testSourceDirectory>test</testSourceDirectory> 
+    <testSourceDirectory>src/test</testSourceDirectory> 
     <plugins>
       <plugin>
         <artifactId>maven-compiler-plugin</artifactId>
@@ -24,11 +24,12 @@
           <failOnMissingWebXml>false</failOnMissingWebXml>
         </configuration>
       </plugin>
-      <plugin>
-         <groupId>org.apache.maven.plugins</groupId>
-         <artifactId>maven-surefire-plugin</artifactId>
-         <version>2.19.1</version>
-     </plugin>
+     <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>2.19.1</version>
+      </plugin>
+      
     </plugins>
     <!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
   </build>
@@ -55,6 +56,7 @@
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <version>4.11</version>
+      <scope>test</scope>
   </dependency>
       <!-- https://mvnrepository.com/artifact/com.googlecode.json-simple/json-simple -->
       <dependency>
