--- a/pom.xml
+++ b/pom.xml
@@ -63,5 +63,10 @@
           <artifactId>json-simple</artifactId>
           <version>1.1</version>
       </dependency>
+      <dependency>
+  <groupId>org.apache.commons</groupId>
+  <artifactId>commons-dbcp2</artifactId>
+  <version>2.0.1</version>
+</dependency>
   </dependencies>
 </project>
