--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -13,6 +13,10 @@
     <servlet-class>authentication.AdminAuthentication</servlet-class>
   </servlet>
   <servlet>
+    <servlet-name>UserProfile</servlet-name>
+    <servlet-class>profile.UserProfile</servlet-class>
+  </servlet>
+  <servlet>
     <servlet-name>ImageDataServlet</servlet-name>
     <servlet-class>imageData.ImageDataServlet</servlet-class>
   </servlet>
@@ -47,6 +51,10 @@
   <servlet-mapping>
     <servlet-name>AuthenticatingUser</servlet-name>
     <url-pattern>/authentication/*</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+    <servlet-name>UserProfile</servlet-name>
+    <url-pattern>/userProfile/*</url-pattern>
   </servlet-mapping>
   <servlet-mapping>
     <servlet-name>FetchInstruction</servlet-name>
