Logging added into the application and solved the memory leak issue due to the database connection pooling

--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -84,4 +84,7 @@
     <servlet-name>ImageFetcher</servlet-name>
     <url-pattern>/imageData/ImageFetcher/*</url-pattern>
   </servlet-mapping>
+  <listener>
+        <listener-class>dao.DBSourceRegistrationListener</listener-class>
+    </listener>
 </web-app>
