--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -48,6 +48,10 @@
     <servlet-name>FetchFields</servlet-name>
     <servlet-class>autoFill.FetchCommonFieldServlet</servlet-class>
   </servlet>
+  <servlet>
+    <servlet-name>Location</servlet-name>
+    <servlet-class>location.LocationServlet</servlet-class>
+  </servlet>
   <servlet-mapping>
     <servlet-name>AdminAuthentication</servlet-name>
     <url-pattern>/adminAuthentication/*</url-pattern>
@@ -91,6 +95,10 @@
   <servlet-mapping>
     <servlet-name>FetchFields</servlet-name>
     <url-pattern>/fetchField/*</url-pattern>
+  </servlet-mapping>
+   <servlet-mapping>
+    <servlet-name>Location</servlet-name>
+    <url-pattern>/location/*</url-pattern>
   </servlet-mapping>
   <listener>
         <listener-class>dao.DBSourceRegistrationListener</listener-class>
