Changed DAO to close connections

--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -52,6 +52,10 @@
     <servlet-name>Location</servlet-name>
     <servlet-class>location.LocationServlet</servlet-class>
   </servlet>
+  <servlet>
+    <servlet-name>QuestionCategory</servlet-name>
+    <servlet-class>questionnaire.QuestionCategoryServlet</servlet-class>
+  </servlet>
   <servlet-mapping>
     <servlet-name>AdminAuthentication</servlet-name>
     <url-pattern>/adminAuthentication/*</url-pattern>
@@ -99,6 +103,10 @@
    <servlet-mapping>
     <servlet-name>Location</servlet-name>
     <url-pattern>/location/*</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+    <servlet-name>QuestionCategory</servlet-name>
+    <url-pattern>/questionCategory/*</url-pattern>
   </servlet-mapping>
   <listener>
         <listener-class>dao.DBSourceRegistrationListener</listener-class>
