--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,19 @@
     <sourceDirectory>src</sourceDirectory>
     <testSourceDirectory>src/test</testSourceDirectory> 
     <plugins>
+    <plugin>
+	  <groupId>org.apache.maven.plugins</groupId>
+	  <artifactId>maven-surefire-report-plugin</artifactId>
+	  <version>2.6</version>
+	  <executions>
+	    <execution>
+	      <phase>test</phase>
+	      <goals>
+	        <goal>report-only</goal>
+	      </goals>
+	    </execution>
+	  </executions>
+	</plugin>
       <plugin>
         <artifactId>maven-compiler-plugin</artifactId>
         <version>3.3</version>
@@ -92,5 +105,11 @@
 	    <artifactId>slf4j-log4j12</artifactId>
 	    <version>1.7.21</version>
 	</dependency>
+	<!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-surefire-report-plugin -->
+<dependency>
+    <groupId>org.apache.maven.plugins</groupId>
+    <artifactId>maven-surefire-report-plugin</artifactId>
+    <version>2.19.1</version>
+</dependency>
   </dependencies>
 </project>
