--- a/pom.xml
+++ b/pom.xml
@@ -37,30 +37,6 @@
           <failOnMissingWebXml>false</failOnMissingWebXml>
         </configuration>
       </plugin>
-      <plugin>
-	  <groupId>org.jacoco</groupId>
-	  <artifactId>jacoco-maven-plugin</artifactId>
-	  <version>0.5.5.201112152213</version>
-	  <configuration>
-	   <destFile>${basedir}/target/coverage-reports/jacoco-unit.exec</destFile>
-	   <dataFile>${basedir}/target/coverage-reports/jacoco-unit.exec</dataFile>
-	  </configuration>
-	  <executions>
-	   <execution>
-	    <id>jacoco-initialize</id>
-	    <goals>
-	     <goal>prepare-agent</goal>
-	    </goals>
-	   </execution>
-	   <execution>
-	    <id>jacoco-site</id>
-	    <phase>package</phase>
-	    <goals>
-	     <goal>report</goal>
-	    </goals>
-	   </execution>
-	  </executions>
-	 </plugin>
      <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
@@ -136,4 +112,19 @@
     <version>2.19.1</version>
 </dependency>
   </dependencies>
+  <reporting>
+  <plugins>
+  <plugin>
+		<groupId>org.codehaus.mojo</groupId>
+		<artifactId>cobertura-maven-plugin</artifactId>
+		<version>2.7</version>
+		<configuration>
+			<formats>
+				<format>html</format>
+				<format>xml</format>
+			</formats>
+		</configuration>
+	</plugin>
+   </plugins>
+</reporting>
 </project>
