--- a/pom.xml
+++ b/pom.xml
@@ -81,6 +81,12 @@
   		<artifactId>commons-dbcp2</artifactId>
   		<version>2.0.1</version>
 	</dependency>
+	<!-- https://mvnrepository.com/artifact/commons-fileupload/commons-fileupload -->
+	<dependency>
+	    <groupId>commons-fileupload</groupId>
+	    <artifactId>commons-fileupload</artifactId>
+	    <version>1.3</version>
+	</dependency>
 	<!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-api -->
 	<dependency>
     	<groupId>org.slf4j</groupId>
