--- a/pom.xml
+++ b/pom.xml
@@ -111,6 +111,24 @@
 	    <artifactId>slf4j-log4j12</artifactId>
 	    <version>1.7.21</version>
 	</dependency>
+	<!-- https://mvnrepository.com/artifact/org.easymock/easymock -->
+<dependency>
+    <groupId>org.easymock</groupId>
+    <artifactId>easymock</artifactId>
+    <version>3.4</version>
+</dependency>
+	<!-- https://mvnrepository.com/artifact/org.springframework/spring-test -->
+<dependency>
+    <groupId>org.springframework</groupId>
+    <artifactId>spring-test</artifactId>
+    <version>2.5</version>
+</dependency>
+	<!-- https://mvnrepository.com/artifact/commons-io/commons-io -->
+<dependency>
+    <groupId>commons-io</groupId>
+    <artifactId>commons-io</artifactId>
+    <version>2.5</version>
+</dependency>
 	<!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-surefire-report-plugin -->
 <dependency>
     <groupId>org.apache.maven.plugins</groupId>
