--- a/pom.xml
+++ b/pom.xml
@@ -61,11 +61,6 @@
  	   </execution>
  	  </executions>
  	 </plugin>
-     <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-surefire-plugin</artifactId>
-        <version>2.19.1</version>
-      </plugin>
       
     </plugins>
     <!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
@@ -173,6 +168,11 @@
 			</formats>
 		</configuration>
 	</plugin>
+	<plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-jxr-plugin</artifactId>
+            <version>2.3</version>
+        </plugin>
    </plugins>
 </reporting>
 </project>
